# value-investing-br

./: .gitignore  README.md  main.py  pyproject.toml
value_investing/: strategy_base.py
value_investing/helpers/: util.py
value_investing/strategies/: bazin.py  clube_valor.py  graham.py  greenblatt.py  greenblatt_mod.py  lobo_alfa.py  low_value.py  strategy_factory.py
