[tool.poetry]
name = "value-investing-br"
version = "0.1.0"
description = ""
authors = ["georgenv <georgenv10@gmail.com>"]
readme = "README.md"
packages = [{include = "value_investing"}]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.0"
openpyxl = "^3.0.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
